<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_titulo"
        />

    <TextView
        android:id="@+id/detalle_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_nombre"
        />

    <TextView
        android:id="@+id/detalle_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_fecha"
        />

    <TextView
        android:id="@+id/detalle_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_telefono"
        />

    <TextView
        android:id="@+id/detalle_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_email"/>

    <TextView
        android:id="@+id/detalle_descripcion_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_descripcion_contacto"
        />

    <Button
        android:id="@+id/detalle_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_boton"
        />






</androidx.appcompat.widget.LinearLayoutCompat>